tests/errors/for-into-iterator-trait-planned.ari
struct Bag {
  value: i64,
}

impl IntoIterator[i64] for Bag {
}

fn main() -> i64 {
  let bag = Bag { value: 1 };
  for value in bag {
    return value;
  }
  return 0;
}
